# lightning-tdoa-simulator

./: .gitignore  BUGS_AND_DECISIONS.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  index.html  pyproject.toml
assets/: chiffres_cles.json  demo_carte.html
experiments/: bench_geometry.py  bench_heatmap.py  bench_noise_curve.py  bench_solver_comparison.py  demo_viz.py
lightning_tdoa/: geometry.py  metrics.py  simulator.py  solver.py  storm.py  viz.py
tests/: test_edge_cases.py  test_metrics.py  test_simulator_solver.py  test_solver.py  test_storm.py
ui/: animation.js  control_bar.js  heatmap_erreur.js  index.html  modale.js  pyodide_bridge.js  rapport_pdf.js  sidebar.js  state_machine.js  stats_panel.js  storm_generator.js  style.css  svg_scene.js
