[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning-tdoa"
version = "0.1.0"
description = "Software simulation of a 3-station VLF lightning detection network using TDOA trilateration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul des Brosses" }]
keywords = ["tdoa", "lightning", "simulation", "geolocation", "vlf"]

dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "folium>=0.15",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lightning_tdoa*"]
